<resources>
    <string name="app_name">LSF Sample App</string>
    <string name="module_scenes_v1">Scenes V1 Module</string>
    <string name="controller">Lead Controller</string>
    <string name="bundled_controller">Bundled Controller</string>
    <string name="controller_enable_started">Enable bundled Controller Service (started)</string>
    <string name="controller_enable_stopped">Enable bundled Controller Service (stopped)</string>
    <string name="action_add">Add</string>
    <string name="action_next">Next</string>
    <string name="action_done">Done</string>
    <string name="action_settings">Settings</string>
    <string name="action_dashboard">Onboarding Dashboard</string>
    <string name="menu_group_info">Group Info</string>
    <string name="menu_group_delete">Delete Group</string>
    <string name="menu_scene_element_apply">Apply Scene Element</string>
    <string name="menu_scene_element_info">Scene Element Info</string>
    <string name="menu_scene_element_delete">Delete Scene Element</string>
    <string name="menu_basic_scene_apply">Apply Scene</string>
    <string name="menu_basic_scene_info">Scene Info</string>
    <string name="menu_basic_scene_delete">Delete Scene</string>
    <string name="menu_basic_scene_element_delete">Delete Scene Element</string>
    <string name="menu_master_scene_apply">Apply Master Scene</string>
    <string name="menu_master_scene_info">Master Scene Info</string>
    <string name="menu_master_scene_delete">Delete Master Scene</string>
    <string name="menu_preset_delete">Delete Preset</string>
    <string name="menu_transition_effect_delete">Delete Transition Effect</string>
    <string name="menu_pulse_effect_delete">Delete Pulse Effect</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_about_title">About LSF Sample App</string>
    <string name="dialog_text_delete">Delete the %1$s &#0034;%2$s&#0034;?</string>
    <string name="title_tab_lamps">Lamps (%1$d)</string>
    <string name="title_tab_groups">Groups (%1$d)</string>
    <string name="title_tab_scenes">Scenes (%1$d)</string>
    <string name="title_lamp_info">LAMP INFO</string>
    <string name="title_lamp_details">Lamp Details</string>
    <string name="title_lamp_rename">LAMP NAME</string>
    <string name="title_group_add">Add Group</string>
    <string name="title_group_edit">Edit Group</string>
    <string name="title_group_info">GROUP INFO</string>
    <string name="title_group_rename">Rename Group</string>
    <string name="title_scene_element_add">Add Scene Element</string>
    <string name="title_scene_element_edit">Edit Scene Element</string>
    <string name="title_scene_element_info">SCENE ELEMENT INFO</string>
    <string name="title_scene_element_rename">Rename Scene Element</string>
    <string name="title_basic_scene_add">Add Scene</string>
    <string name="title_basic_scene_info">SCENE INFO</string>
    <string name="title_basic_scene_rename">Rename Scene</string>
    <string name="title_basic_scene_element_add">Add Scene Element</string>
    <string name="title_master_scene_add">Add Master Scene</string>
    <string name="title_master_scene_info">MASTER SCENE INFO</string>
    <string name="title_master_scene_rename">Rename Master Scene</string>
    <string name="title_presets">Presets</string>
    <string name="title_preset_add">Add Preset</string>
    <string name="title_presets_save_new">Save New Preset</string>
    <string name="title_effect_add">Add Effect</string>
    <string name="title_effect_transition_add">Add Transition Effect</string>
    <string name="title_effect_transition_duration">Transition Duration</string>
    <string name="title_effect_pulse_add">Add Pulse Effect</string>
    <string name="title_effect_pulse_duration">Pulse Duration</string>
    <string name="title_effect_pulse_period">Pulse Period</string>
    <string name="title_effect_pulse_count">Pulse Count</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_select_all">Select All</string>
    <string name="dialog_clear_all">Clear All</string>
    <string name="color_temperature">Color Temperature</string>
    <string name="saturation">Saturation</string>
    <string name="hue">Hue</string>
    <string name="brightness">Brightness</string>
    <string name="state_label_header_single">Properties</string>
    <string name="state_label_header_start">Start Properties</string>
    <string name="state_label_header_end">End Properties</string>
    <string name="star">*</string>
    <string name="not_supported_by_all">* Not supported by some lamps in this group</string>
    <string name="label_lamp_name">Lamp Name</string>
    <string name="label_group_name">Group Name</string>
    <string name="label_effect_name">Effect Name</string>
    <string name="lamp_params_lumens">Lumens</string>
    <string name="lamp_params_energy">Energy usage</string>
    <string name="lamp_details">Lamp details</string>
    <string name="lamp_details_model">Lamp model</string>
    <string name="lamp_details_make">Lamp make</string>
    <string name="lamp_details_device">Device type</string>
    <string name="lamp_details_lamp">Lamp type</string>
    <string name="lamp_details_base">Base type</string>
    <string name="lamp_details_beam">Lamp beam angle</string>
    <string name="lamp_details_dimmable">Dimmable</string>
    <string name="lamp_details_has_color">Color</string>
    <string name="lamp_details_has_temp">Variable color temperature</string>
    <string name="lamp_details_has_effects">Has effects</string>
    <string name="lamp_details_voltage_min">Min voltage</string>
    <string name="lamp_details_voltage_max">Max voltage</string>
    <string name="lamp_details_wattage_actual">Wattage</string>
    <string name="lamp_details_wattage_equiv">Incandescent equivalent</string>
    <string name="lamp_details_lumens">Max lumens</string>
    <string name="lamp_details_temp_min">Min temperature</string>
    <string name="lamp_details_temp_max">Max temperature</string>
    <string name="group_select_members">Select the lamps for this group</string>
    <string name="group_table_all">All Lamps</string>
    <string name="group_info_label_members">Lamps in this group:</string>
    <string name="member_group_not_found">[Group Not Found: %1$s]</string>
    <string name="member_lamp_not_found">[Lamp Not Found: %1$s]</string>
    <string name="member_effect_not_found">[Effect Not Found: %1$s]</string>
    <string name="member_scene_not_found">[Scene Not Found: %1$s]</string>
    <string name="member_scene_element_not_found">[Scene Element Not Found: %1$s]</string>
    <string name="group_info_members_none">No group members</string>
    <string name="scene_element_info_name">Scene Element Name</string>
    <string name="scene_element_info_members">Lamps and Groups in this Scene Element</string>
    <string name="scene_element_select_members">Select one or more lamps and groups to be in this scene element</string>
    <string name="scene_element_select_effect">Select an effect for this scene element</string>
    <string name="scene_element_members_none">No scene element members</string>
    <string name="basic_scene_info_name">Scene Name</string>
    <string name="basic_scene_info_elements">SCENE ELEMENTS</string>
    <string name="basic_scene_v2_info_elements">Scene elements in this Scene</string>
    <string name="basic_scene_select_members">Select one or more lamps and groups to be in this scene</string>
    <string name="basic_scene_select_elements">Select one or more elements to be in this scene</string>
    <string name="basic_scene_select_effect">Choose an optional effect for %1$s</string>
    <string name="basic_scene_members_none">No scene members</string>
    <string name="master_scene_info_name">Master Scene Name</string>
    <string name="master_scene_info_members">Scenes in this Master Scene</string>
    <string name="master_scene_select_members">Select the scenes for this master scene</string>
    <string name="master_scene_members_none">No master scene members</string>
    <string name="label_enter_name">Enter a name for this %1$s:</string>
    <string name="label_enter_duration">Duration</string>
    <string name="label_enter_period">Period</string>
    <string name="label_enter_count">Count</string>
    <string name="label_group">group</string>
    <string name="label_scene_element">scene element</string>
    <string name="label_basic_scene">scene</string>
    <string name="label_effect">effect</string>
    <string name="label_master_scene">master scene</string>
    <string name="label_preset">preset</string>
    <string name="label_transition_effect">transition effect</string>
    <string name="label_pulse_effect">pulse effect</string>
    <string name="label_preset_select">Choose Preset</string>
    <string name="toast_name_missing">Please enter a %1$s name</string>
    <string name="toast_number_missing">Please enter a %1$s value</string>
    <string name="toast_number_value_invalid">Please enter a value between 0 and %1$.3f</string>
    <string name="toast_number_format_invalid">Please enter a valid number</string>
    <string name="toast_members_missing">Please select members for this %1$s</string>
    <string name="toast_scene_element_apply">Lamps have been set to \"%1$s\"</string>
    <string name="toast_basic_scene_apply">Lamps have been set to \"%1$s\"</string>
    <string name="toast_master_scene_apply">Lamps have been set to \"%1$s\"</string>
    <string name="details">Details</string>
    <string name="about">About</string>
    <string name="lamp_about_deviceid">Device ID</string>
    <string name="lamp_about_appid">App ID</string>
    <string name="lamp_about_device_name">Device name</string>
    <string name="lamp_about_default_language">Default language</string>
    <string name="lamp_about_app_name">App name</string>
    <string name="lamp_about_description">Description</string>
    <string name="lamp_about_manufacturer">Manufacturer</string>
    <string name="lamp_about_model">Model number</string>
    <string name="lamp_about_date">Date of manufacture</string>
    <string name="lamp_about_soft_ver">Software version</string>
    <string name="lamp_about_hard_ver">Hardware version</string>
    <string name="lamp_about_support_url">Support URL</string>
    <string name="presets_new_name">Preset %1$s</string>
    <string name="presets_message_none">There are no presets available.</string>
    <string name="effect_sort_constant">A</string>
    <string name="effect_sort_transition">B</string>
    <string name="effect_sort_pulse">C</string>
    <string name="effect_name_unknown">Unknown</string>
    <string name="effect_name_none">None</string>
    <string name="effect_name_preset">Preset</string>
    <string name="effect_name_transition">Transition</string>
    <string name="effect_name_pulse">Pulse</string>
    <string name="effect_info_period_name">Period</string>
    <string name="effect_info_period_format">%1$.3f</string>
    <string name="effect_info_help_none">Set the properties that %1$s will change to</string>
    <string name="effect_info_help_transition">Set the properties that %1$s will transition to</string>
    <string name="effect_info_help_pulse">Set the start and end properties that %1$s will cycle through</string>
    <string name="effect_info_help_no_members">this scene element</string>
    <string name="effect_info_transition_duration">Duration</string>
    <string name="effect_info_pulse_duration">Pulse duration</string>
    <string name="effect_info_duration_format">%1$.3f</string>
    <string name="effect_pulse_start_with_current_properties">Start with each lamp\'s properties when the scene is applied</string>
    <string name="na">n/a</string>
    <string name="source_code">Source Code</string>
    <string name="team">Team</string>
    <string name="notice">Notice File</string>
</resources>